# hearthstone_skipper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  info.plist  skipper-install.cmake.in
.github/workflows/: build.yaml
include/: app.h  app_settings.h  clash_config.h  config_aware_qeasy.h  config_deducer.h  float_button.h  logger.h  qcurl.h  setting_dialog.h  skipper.h  window_listener.h
src/: app.cpp  app.h  app_settings.cpp  clash_config.cpp  config.cpp  config.h  config_aware_qeasy.cpp  config_deducer.cpp  float_button.cpp  logger.cpp  logger.h  main.cpp  qcurl.cpp  qcurl.h  setting.cpp  setting.h  setting_dialog.cpp  skipper.cpp  skipper.h  tray_icon.cpp  tray_icon.h
src/platform/: window_listener.mm
test/: qcurl_test.cpp
